# openjudge

./: CMakeLists.txt  README.md  noi.c
